# file_inspector

./: .gitignore  README.md  pyproject.toml
file_inspector/: main.py
