[tool.poetry]
name = "file-inspector"
version = "0.1.0"
description = "A simple demo to watchfiles"
authors = ["le_woudar <rollandkev@yahoo.fr>"]
readme = "README.md"
packages = [{include = "file_inspector"}]

[tool.poetry.dependencies]
python = "^3.11"
watchfiles = "^0.19.0"
click = "^8.1.3"
diff-match-patch = "^20230430"

[tool.poetry.scripts]
inspector = "file_inspector.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
